Updated BaseURL again...

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 <body>
 	<header>
 	==================<br>
-	== <a href="/">Kromftronics</a> ==<br>
+	== <a href="https://kromftronics.com/">Kromftronics</a> ==<br>
 	==================
 	<div style="float: right;">Electronic DIY Sound Machine</div><br>
 	<p>
@@ -44,7 +44,7 @@
 		
 		
 			<article>
-	<h1><a href="/posts/rotten/">Rotten</a></h1>
+	<h1><a href="https://kromftronics.com/posts/rotten/">Rotten</a></h1>
 	<b><time>24.12.2024</time></b>
 	
 	<a href="/tags/distortion">distortion</a>
@@ -64,14 +64,14 @@
 	<div>
 		<p>Saturation, overdrive, or distortion is really what makes an electrical guitar come alive. The sound and tone of the guitar can be sculptured and totally change the character of the instrument depending on which saturation is being used. This is also why there exists soooo many overdrive/distortion pedals out there. It is a very personal thing, what distortion pedal that you prefer. Personally, I like things to be a bit fuzzy while still having some overdrive character.</p>
 		
-			<a href="/posts/rotten/">Read more...</a>
+			<a href="https://kromftronics.com/posts/rotten/">Read more...</a>
 		
 	</div>
 </article>
 
 		
 			<article>
-	<h1><a href="/posts/the-ping-ting/">The Ping Ting</a></h1>
+	<h1><a href="https://kromftronics.com/posts/the-ping-ting/">The Ping Ting</a></h1>
 	<b><time>20.10.2024</time></b>
 	
 	<a href="/tags/diode-clipping">diode-clipping</a>
@@ -90,14 +90,14 @@
 		<h2 id="introduction">Introduction</h2>
 <p>Filters are a really wonderful and powerful tool in music production and sound design. They can be used to control and &ldquo;filter&rdquo; out unwanted content of the original unprocessed sound, but can also be used as a creative tool to generate new and interesting sounds. One interesting use of filters as a sound design tool is filter pinging, which will be described later in this article. <em>The Ping Ting</em> is essentially a filter box, containing three parallel high-Q configurable filters with built-in clipping, designed to be able to be &ldquo;pinged&rdquo;.</p>
 		
-			<a href="/posts/the-ping-ting/">Read more...</a>
+			<a href="https://kromftronics.com/posts/the-ping-ting/">Read more...</a>
 		
 	</div>
 </article>
 
 		
 			<article>
-	<h1><a href="/posts/the-kiss/">The Kiss</a></h1>
+	<h1><a href="https://kromftronics.com/posts/the-kiss/">The Kiss</a></h1>
 	<b><time>25.07.2024</time></b>
 	
 	<a href="/tags/alfa">alfa</a>
@@ -119,7 +119,7 @@
 	<div>
 		<p>Ever since I started the journey of making electronic music some 10 years ago now, I&rsquo;ve always been fascinated with how synthesizers and audio equipment work. This turned into the idea of making my own analog synthesizer, which I named &ldquo;The Kiss&rdquo; (I ended up giving it as a gift to my good friend by the nickname Kiss, hence the name). In this article, I will try to describe the design process and the errors I made along the way, which will hopefully serve as an inspiration for other people wanting to create their own analog synthesizer.</p>
 		
-			<a href="/posts/the-kiss/">Read more...</a>
+			<a href="https://kromftronics.com/posts/the-kiss/">Read more...</a>
 		
 	</div>
 </article>
