WiP on Solstrejf

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,17 @@
 		
 			<article>
 	<h1><a href="https://kromftronics.com/posts/rotten/">Rotten</a></h1>
+	
 	<b><time>24.12.2024</time></b>
+	<br>
+	categories:
+	
+	<a href="/categories/electronics">electronics</a>
+	
+	<a href="/categories/stompboxes">stompboxes</a>
+	
+	<br>
+	tags:
 	
 	<a href="/tags/distortion">distortion</a>
 	
@@ -72,7 +82,17 @@
 		
 			<article>
 	<h1><a href="https://kromftronics.com/posts/the-ping-ting/">The Ping Ting</a></h1>
+	
 	<b><time>20.10.2024</time></b>
+	<br>
+	categories:
+	
+	<a href="/categories/electronics">electronics</a>
+	
+	<a href="/categories/filters">filters</a>
+	
+	<br>
+	tags:
 	
 	<a href="/tags/diode-clipping">diode-clipping</a>
 	
@@ -98,7 +118,17 @@
 		
 			<article>
 	<h1><a href="https://kromftronics.com/posts/the-kiss/">The Kiss</a></h1>
+	
 	<b><time>25.07.2024</time></b>
+	<br>
+	categories:
+	
+	<a href="/categories/electronics">electronics</a>
+	
+	<a href="/categories/synthesizers">synthesizers</a>
+	
+	<br>
+	tags:
 	
 	<a href="/tags/alfa">alfa</a>
 	
