--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,13 @@
 		
 		
 			<article>
-	<h1><a href="https://kromftronics.com/posts/rotten/">Rotten</a></h1>
+	
+		<h1 style="text-align:center; margin-bottom:0"><a href="https://kromftronics.com/posts/rotten/">Rotten</a></h1>
+		
+			<center>
+				<img src=/images/rotten/gallery/01-rotten.jpeg alt="Featured Image", class="responsive-image">
+			</center>
+		
 	
 	<b><time>24.12.2024</time></b>
 	<br>
@@ -81,7 +87,13 @@
 
 		
 			<article>
-	<h1><a href="https://kromftronics.com/posts/the-ping-ting/">The Ping Ting</a></h1>
+	
+		<h1 style="text-align:center; margin-bottom:0"><a href="https://kromftronics.com/posts/the-ping-ting/">The Ping Ting</a></h1>
+		
+			<center>
+				<img src=/images/the-ping-ting/intro-gallery/image1.jpeg alt="Featured Image", class="responsive-image">
+			</center>
+		
 	
 	<b><time>20.10.2024</time></b>
 	<br>
@@ -117,7 +129,13 @@
 
 		
 			<article>
-	<h1><a href="https://kromftronics.com/posts/the-kiss/">The Kiss</a></h1>
+	
+		<h1 style="text-align:center; margin-bottom:0"><a href="https://kromftronics.com/posts/the-kiss/">The Kiss</a></h1>
+		
+			<center>
+				<img src=/images/the-kiss/intro-gallery/01-front-panel-left.jpeg alt="Featured Image", class="responsive-image">
+			</center>
+		
 	
 	<b><time>25.07.2024</time></b>
 	<br>
