Major update: added features to snap-gallery, to allow different scalings and modes

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
 		<h1 style="text-align:center; margin-bottom:0"><a href="https://kromftronics.com/posts/rotten/">Rotten</a></h1>
 		
 			<center>
-				<img src=/images/rotten/gallery/01-rotten.jpeg alt="Featured Image", class="responsive-image">
+				<img src=/images/rotten/gallery/04-rotten.jpeg alt="Featured Image", class="responsive-image">
 			</center>
 		
 	
@@ -182,8 +182,9 @@
 
 	<footer>
 	<p>&copy; 2025 Kromftronics |
-	<a href="https://github.com/KamikazeVildsvin"><b>Github</b></a> |
-	<a href="mailto:info@kromftronics.com"><b>info@kromftronics.com</b></a> |
+	<a href="https://kromftronics.com/"><b>Home</b></a> |
+		<a href="https://github.com/KamikazeVildsvin"><b>Github</b></a> |
+		<a href="mailto:info@kromftronics.com"><b>info@kromftronics.com</b></a> |
 	</p>
 </footer>
 
